--- a/analysis/paper.Rmd
+++ b/analysis/paper.Rmd
@@ -1,5 +1,5 @@
 ---
-title: Repeoducibility of "Characterizing Political Fake News in Twitter"
+title: Reproducibility of "Characterizing Political Fake News in Twitter"
 author: Andy De La Fuente, Anmol Srivastava, Juan Solorio, Maggie Weatherly, Matt Rhodes
 date: "`r format(Sys.time(),'%d %B, %Y')`"
 bibliography: ../Notes/citations.bib
